<resources>
	<string name="app_name">Check in Driver</string>
	<string name="start_camera_app">Start camera App</string>
	<string name="hello_camera">Hello Camera</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="qr_scan">QR Scan</string>
	<string name="sent_nearby">sent Nearby</string>
	<string name="shake_it">shake it</string>
	<string name="this_is_nearby_fragment">This is NearBy Fragment</string>
	<string name="on_device_found">On Device found</string>
	<string name="shake_your_phone">Shake your Phone !!</string>
	<string name="try_again">Try again</string>
	<string name="generate_qr">Genarate Qr</string>
	<string name="full_check_in">ลงชื่อเข้างาน</string>
	<string name="full_check_between">ลงชื่อระหว่างวัน</string>
	<string name="full_check_out">ลงชือออกงาน</string>
	<string name="shake_fine">เขย่าเพื่อค้นหาคลัง</string>
	<string name="nearby_fine">ค้นหาคลังรอบตัว</string>
	<string name="history_check">ประวัติการเช็คอิน</string>
	<string name="request_absent">คำขอวันลา</string>
	<string name="generate_qrcode">Generate QrCode</string>
	<string name="shake_phone_text">เขย่าโทรศัพท์ของคุณ</string>
	<string name="fine_location_shake"> ค้นหาคลังในระยะ 500 เมตร </string>
	<string name="fine_phone_nearby">ค้นหาโทรศัพท์รอบๆตัวคุณด้วย NearBy</string>
	<string name="fine_phone">ค้นหาโทรศัพท์</string>
	<string name="fine_location"> ค้นหาคลัง </string>
	<string name="or_press_bt">หรือกดปุ่ม</string>
	<string name="absent_sent">คำขอวันลา</string>
	<string name="welcome">ยินดีต้อนรับ</string>
	<string name="LoginForScanQr">เข้าสู่ระบบเพื่อแสกน QR code</string>
	<string name="login">เข้าสู่ระบบ</string>
	<string name="username_login"> รหัสผู้ใช้งาน </string>
	<string name="password">รหัสผ่าน</string>
	<string name="scan_qr">แสกน QR Code</string>
	<string name="date_text">วันที่</string>
	<string name="absence_type_text">ประเภทการลา</string>
	<string name="personal_absence">ลากิจ</string>
	<string name="sick_absence">ลาป่วย</string>
	<string name="vacation_absence">ลาพักร้อน</string>
	<string name="reason_text">เหตุผล</string>
	<string name="reason_absence">กรุณาระบุเหตุผลในการลา</string>
	<string name="date_absence_start_text">วันที่เริ่มลา</string>
	<string name="date_absence_end_text">วันลาสุดท้าย</string>
	<string name="show_date_pick">%1$s / %2$s / %3$s</string>
	<string name="to_text">ถึง</string>
	<string name="show_location">แสดงตำแหน่งคลัง</string>
	<string name="user_profile">ข้อมูลส่วนตัว</string>
	<string name="edit_user_profile"> แก้ไขข้อมูลส่วนตัว</string>
	<string name="edit">แก้ไข</string>
	<string name="date_form">วัน / เดือน / ปีเกิด</string>
	<string name="email">อีเมล</string>
	<string name="number_phone">เบอร์โทรศัพท์</string>
	<string name="system_check_out">ออกจากระบบ</string>
	<string name="title_activity_map">Map</string>
	<string name="camera_text"> Camera </string>
	<string name="manual_text"> Manual </string>
	<string name="auto_text"> Auto Checkout </string>
	<string name="you_not_driver">คุณไม่ใช่ Driver</string>
	<string name="wrong_username">ชื่อผู้ใช้ หรือรหัสผ่านไม่ถูกต้อง</string>
	<string name="null_input"> กรุณากรอกชื่อ และรหัสผ่านให้ครบถ้วน</string>
	<string name="phone_input"> *** เบอร์โทรศัพท์ต้องมี 10 หลัก ****</string>
	<string name="data_input"> กรุณากรอกข้อมูลให้ครบถ้วน</string>
	<string name="name_surname"> ชื่อ - นามสกุล</string>
	<string name="token_expire"> รหัสของคุณหมดอายุ \n กรุณาเข้าสู่ระบบอีกครั้ง </string>
	<string name="pass_must_more_8">*** รหัสผ่านต้องมีความยาวอย่างน้อย 8 ตัวอักษร ***</string>
	<string name="username_must_equal_13"> รหัสผู้ใช้งานต้องมี 13 ตัว</string>
	<string name="show_full_name">%1$s %2$s </string>
	<string name="data_not_found">ไม่พบข้อมูล</string>
	<string name="title_activity_test1">Test1Activity</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
