<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group
			android:checkableBehavior="single">
		<item android:id="@+id/scanQr"
			  android:icon="@mipmap/ic_scan_qr"
			  android:checked="true"
			  android:title="@string/scan_qr"/>

		<item android:id="@+id/shakeFine"
			  android:icon="@mipmap/ic_shake"
			  android:title="@string/shake_fine"/>

		<item android:id="@+id/nearbyFine"
			  android:icon="@mipmap/ic_nearby"
			  android:title="@string/nearby_fine"/>

		<item android:id="@+id/showMap"
			  android:icon="@mipmap/ic_map"
			  android:title="@string/show_location"/>

		<item android:id="@+id/history"
			  android:icon="@mipmap/ic_history"
			  android:title="@string/history_check"/>

		<item android:id="@+id/absent"
			  android:icon="@mipmap/ic_absent"
			  android:title="@string/request_absent"/>
	</group>
</menu>