<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical"
>
	<Button
			android:id="@+id/btScanQR"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/qr_scan"
			android:textSize="30sp"/>
	<Button
			android:id="@+id/btSentNearBy"
			style="@android:style/Animation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/sent_nearby"
			android:textSize="30sp"/>
	<Button
			android:id="@+id/btShake"
			style="@android:style/Animation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/shake_it"
			android:textSize="30sp"/>
</LinearLayout>