<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">
	<TextView
			android:layout_marginTop="30dp"
			android:gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/welcome"
			android:textSize="30sp"
			android:textColor="@color/black"/>
	<TextView
			android:gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/LoginForScanQr"
			android:textSize="15sp"/>
	<ImageView
			android:layout_marginTop="30dp"
			android:layout_marginBottom="30dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_login"/>
	<android.support.design.widget.TextInputLayout
			android:id="@+id/username_input_layout"
			android:padding="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/username"/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:padding="10dp"
			android:layout_height="wrap_content"
			android:layout_below="@id/username_input_layout">
		<EditText
				android:inputType="textPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"/>
	</android.support.design.widget.TextInputLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="bottom">
		<Button
				android:id="@+id/confirmLogin"
				android:gravity="center"
				android:text="@string/login"
				android:textSize="20sp"
				android:textColor="@color/white"
				android:textAlignment="center"
				android:background="@color/purple"
				android:layout_margin="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>