<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
>

	<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			>

		<ImageView
				android:id="@+id/toolbar"
				android:src="@drawable/menu_bar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:ignore="ContentDescription"/>

	</LinearLayout>
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="50dp"
	>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/full_check_in"
				android:textSize="30sp"
				android:textColor="@color/black"
		/>

	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center"

	>
		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/phone_main"
				android:padding="20dp"
		/>
		<Button
				android:id="@+id/checkInBtn"
				android:textSize="20sp"
				android:text="@string/full_check_in"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:textColor="@color/white"
				android:padding="10sp"
				android:background="@color/purple"
		/>
		<Button
				android:id="@+id/checkBetBtn"
				android:textSize="20sp"
				android:text="@string/full_check_out"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:textColor="@color/white"
				android:padding="10sp"
				android:background="@color/purple"

		/>
		<Button
				android:id="@+id/checkOutBtn"
				android:textSize="20sp"
				android:text="@string/full_check_between"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:padding="10sp"
				android:textColor="@color/white"
				android:background="@color/purple"
		/>
		<TextView
				android:id="@+id/genQr"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/generate_qrcode"/>
	</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>