<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			  android:layout_marginStart="20dp"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:orientation="vertical"
			 tools:context=".fragment.ProfileShowFragment">
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<ImageView
				android:id="@+id/back_to_main_menu"
				android:src="@drawable/ic_back"
				android:layout_gravity="center"
				android:padding="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:ignore="ContentDescription"/>
		<TextView
				android:text="@string/user_profile"
				android:textSize="20sp"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="match_parent"/>
		<TextView
				android:id="@+id/edit_profile"
				android:text="@string/edit"
				android:textColor="@color/purple"
				android:layout_marginEnd="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
	</LinearLayout>
	<FrameLayout
			android:layout_margin="20dp"
			android:layout_gravity="center_horizontal"
			android:layout_width="100dp"
			android:layout_height="100dp">
		<ImageView
				android:src="@mipmap/pic_default_user"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:ignore="ContentDescription"/>
		<ImageView
				android:src="@mipmap/pic_camera"
				android:layout_gravity="end|bottom"
				android:padding="-20dp"
				android:outlineSpotShadowColor="@color/black"
				android:outlineAmbientShadowColor="@color/black"
				android:layout_width="30dp"
				android:layout_height="30dp"
				tools:ignore="ContentDescription"/>
	</FrameLayout>
	<android.support.design.widget.TextInputLayout
			android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<EditText
				android:id="@+id/user_name"
				android:textColor="@color/black"
				android:enabled="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/username"
				android:inputType="textShortMessage"
				tools:ignore="Autofill" />
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
			android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<EditText
				android:id="@+id/birth_date"
				android:textColor="@color/black"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/date_form"
				android:inputType="date"
				tools:ignore="Autofill" />
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
			android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<EditText
				android:id="@+id/mail"
				android:textColor="@color/black"
				android:enabled="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/email"
				android:inputType="textEmailAddress"
				tools:ignore="Autofill" />
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
			android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<EditText
				android:id="@+id/phone"
				android:textColor="@color/black"
				android:enabled="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/number_phone"
				android:inputType="phone"
				tools:ignore="Autofill" />
	</android.support.design.widget.TextInputLayout>
</LinearLayout>