<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/purple"
			android:orientation="vertical"
			android:paddingTop="40dp"
			android:gravity="center">

		<com.mikhaellopez.circularimageview.CircularImageView
				android:id="@+id/imageUser"
				android:src="@drawable/ic_launcher_background"
				android:layout_width="100dp"
				android:layout_height="100dp"
				app:civ_border_width="4dp"
				android:scaleType="centerCrop"
				tools:ignore="ContentDescription"/>

		<TextView
				android:id="@+id/nameText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/name_surname"
				android:textSize="20sp"
				android:textColor="@color/white"
				android:layout_gravity="center"
				android:padding="10dp"
		/>

	</LinearLayout>
	<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:paddingTop="10dp"
			android:orientation="vertical">
		<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:padding="20dp"
				android:orientation="horizontal">
			<ImageView
					android:src="@drawable/ic_shake"
					android:layout_width="38dp"
					android:layout_height="38dp"
					tools:ignore="ContentDescription"/>

			<TextView
					android:id="@+id/shake_fine"
					android:layout_gravity="center_vertical"
					android:text="@string/shake_fine"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:textSize="20sp"
					android:textColor="@color/black"/>
		</LinearLayout>
		<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:padding="20dp"
				android:orientation="horizontal">
			<ImageView
					android:src="@drawable/ic_nearby"
					android:layout_width="38dp"
					android:layout_height="38dp"
					tools:ignore="ContentDescription"/>

			<TextView
					android:id="@+id/nearby_fine"
					android:layout_gravity="center_vertical"
					android:text="@string/nearby_fine"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="50dp"
					android:textSize="20sp"
					android:textColor="@color/black"
			/>
		</LinearLayout>
		<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:padding="20dp"
				android:orientation="horizontal">
			<ImageView
					android:src="@drawable/ic_history"
					android:layout_width="38dp"
					android:layout_height="38dp"
					tools:ignore="ContentDescription"/>

			<TextView
					android:id="@+id/history"
					android:layout_gravity="center_vertical"
					android:text="@string/history_check"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="50dp"
					android:textSize="20sp"
					android:textColor="@color/black"
			/>
		</LinearLayout>
		<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:padding="20dp"
				android:orientation="horizontal">
			<ImageView
					android:src="@drawable/ic_absent"
					android:layout_width="38dp"
					android:layout_height="38dp"
					tools:ignore="ContentDescription"/>

			<TextView
					android:id="@+id/absent"
					android:layout_gravity="center_vertical"
					android:text="@string/request_absent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="50dp"
					android:textSize="20sp"
					android:textColor="@color/black"
			/>
		</LinearLayout>





	</LinearLayout>
</LinearLayout>
