<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="20dp"
		android:orientation="vertical"
		tools:context=".fragment.ProfileEditFragment">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

		<ImageView
				android:id="@+id/back_to_main_menu"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:padding="10dp"
				android:src="@drawable/ic_back"
				tools:ignore="ContentDescription" />

		<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:text="@string/user_profile"
				android:textColor="@color/black"
				android:textSize="20sp" />
	</LinearLayout>

	<FrameLayout
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_gravity="center_horizontal"
			android:layout_margin="20dp">
		<com.mikhaellopez.circularimageview.CircularImageView
				android:id="@+id/user_pic"
				android:src="@mipmap/pic_default_user"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:civ_border_width="4dp"
				android:scaleType="centerCrop"
				tools:ignore="ContentDescription"/>
		<ImageView
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_gravity="end|bottom"
				android:outlineAmbientShadowColor="@color/black"
				android:outlineSpotShadowColor="@color/black"
				android:padding="-20dp"
				android:src="@mipmap/pic_camera"
				tools:ignore="ContentDescription" />
	</FrameLayout>

	<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">

		<EditText
				android:id="@+id/name_surname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/name_surname"
				android:inputType="textShortMessage"
				android:textColor="@color/black"
				tools:ignore="Autofill" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">

		<EditText
				android:id="@+id/phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/number_phone"
				android:inputType="phone"
				android:textColor="@color/black"
				tools:ignore="Autofill" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">

		<EditText
				android:id="@+id/pass_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"
				android:inputType="textShortMessage"
				android:textColor="@color/black"
				tools:ignore="Autofill" />
	</android.support.design.widget.TextInputLayout>

	<LinearLayout
			android:gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<Button
				android:id="@+id/confirm_edit"
				android:text="@string/confirm_text"
				android:textSize="20sp"
				android:textColor="@color/white"
				android:background="@color/purple"
				android:paddingStart="30dp"
				android:paddingEnd="30dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center" />
	</LinearLayout>
</LinearLayout>